Add Vazir font (`Vazir-Regular.woff`) https://github.com/rastikerdar/vazir-font

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     </script>
 
     <style>
+        @font-face {
+            font-family: Vazir;
+            src: local('Vazir'), url('Vazir-Regular.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        html, input {
+            font-family: Vazir, sans-serif;
+        }
+
+        ::selection {
+            color: initial;
+            background-color: deepskyblue;
+        }
+
         div {
             margin: 16px
         }
