Add `README.md` + Some other improvement.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ماشین حساب ابجد (آنلاین/آفلاین)</title>
 
     <script type="module">
 		 import calculateAbjadCode, { intToFa } from './main.js'
@@ -35,7 +35,7 @@
 
         ::selection {
             color: initial;
-            background-color: deepskyblue;
+            background-color: lightskyblue;
         }
 
         div {
