--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>ماشین حساب ابجد (آنلاین/آفلاین)</title>
 
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+
     <script type="module">
 		 import calculateAbjadCode, { intToFa } from './main.js'
 
@@ -29,7 +31,13 @@
             font-style: normal;
         }
 
-        html, input {
+        html {
+            font-size: 3vh;
+            font-family: Vazir, sans-serif;
+        }
+
+        input {
+            font-size: 1em;
             font-family: Vazir, sans-serif;
         }
 
