Better font-size (+ responsibility)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
             font-style: normal;
         }
 
-        html, input {
+        html {
+            font-size: 3vh;
+            font-family: Vazir, sans-serif;
+        }
+
+        input {
+            font-size: 1em;
             font-family: Vazir, sans-serif;
         }
 
