Move resources to `res` folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ماشین حساب ابجد (آنلاین/آفلاین)</title>
 
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="res/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <script type="module">
 		 import calculateAbjadCode, { intToFa } from './main.js'
@@ -26,7 +26,7 @@
     <style>
         @font-face {
             font-family: Vazir;
-            src: local('Vazir'), url('Vazir-Regular.woff') format('woff');
+            src: local('Vazir'), url('res/Vazir-Regular.woff') format('woff');
             font-weight: normal;
             font-style: normal;
         }
