--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html dir="rtl" lang="fa">
 <head>
     <meta charset="UTF-8">
-    <title>ماشین حساب ابجد (آنلاین/آفلاین)</title>
+    <title>ماشین حساب أبجد (آنلاین/آفلاین)</title>
 
     <link href="res/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <script type="module">
-		 import calculateAbjadCode, { intToFa } from './main.js'
+		 import calculateAbjadCode, {intToFa} from './main.js'
 
 		 const input = document.getElementById('input')
 
