Move `main.js` to `src/`

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="res/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <script type="module">
-		 import calculateAbjadCode, {intToFa} from './main.js'
+		 import calculateAbjadCode, {intToFa} from './src/main.js'
 
 		 const input = document.getElementById('input')
 
